# custom-print

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  check.sh
.github/workflows/: ci.yml
examples/wasm_bindgen/: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
examples/wasm_bindgen/src/: lib.rs
src/: concat_try_writer.rs  concat_writer.rs  flush.rs  flush_fn.rs  fmt_try_writer.rs  fmt_writer.rs  into_try_write_fn.rs  into_write_fn.rs  io_try_writer.rs  io_writer.rs  lib.rs  never_error.rs  write_bytes.rs  write_fns.rs  write_str.rs
src/macros/: dbg.rs  dbglike.rs  dbgwrite.rs  define.rs  flush.rs  mod.rs  panic_hook.rs  print.rs  printlike.rs  write.rs  writer.rs  writer_expr.rs
tests/: buf_writer.rs  cchar_fmt_try_writer.rs  cchar_io_try_writer.rs  cchar_writer.rs  concat_try_writer.rs  concat_writer.rs  dbg.rs  extern_fn.rs  fmt_try_writer.rs  fmt_writer.rs  io_partial_writer.rs  io_try_writer.rs  io_writer.rs  line_writer.rs  panic_hook.rs  readme.rs  shadowing_with_macros.rs  shadowing_with_use.rs  try_dbg.rs  try_print.rs  unsafe_fn1.rs  unsafe_fn1_path.rs  unsafe_fn2.rs  version.rs
tests/no-alloc/: Cargo.toml
tests/no-alloc/src/: main.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: main.rs
tests/re-export/: Cargo.toml
tests/re-export/src/: lib.rs
tests/use-re-exported/: Cargo.toml
tests/use-re-exported/src/: lib.rs
