[package]
name = "custom-print"
version = "0.0.1"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2018"
description = "Define custom println and dbg macros in wasm and other targets"
readme = "README.md"
repository = "https://github.com/zheland/custom-print"
documentation = "https://docs.rs/custom-print"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
keywords = ["wasm", "web", "log", "print", "dbg"]

[features]
default = ["alloc", "std"]
alloc = []
std = ["alloc"]

[dependencies]

[dev-dependencies]
once_cell = "1.7"
readme-sync = "0.2.0"
version-sync = "0.9.2"

[package.metadata.docs.rs]
all-features = true
