[package]
name = "custom-print"
version = "1.0.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "Define custom println and dbg macros in wasm and other targets"
readme = "README.md"
repository = "https://github.com/zheland/custom-print"
documentation = "https://docs.rs/custom-print"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
keywords = ["wasm", "web", "log", "print", "dbg"]

[features]
default = ["alloc", "std"]
alloc = []
std = ["alloc"]

[dependencies]

[dev-dependencies]
once_cell = "1.18.0"
readme-sync = "0.2.1"
version-sync = "0.9.4"

[package.metadata.docs.rs]
all-features = true
