[package]
name = "custom-wasm-bindgen-example"
version = "0.1.0"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"

[dependencies.custom-print]
path = "../.."

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
